--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><meta charset="UTF-8"></head>
-<body><script src="bundle.js"></script></body>
+<body style="all:initial">
+	<script src="bundle.js"></script>
+</body>
 </html> 
